compiled sass, fixed font-family, fixed spacing

--- a/css/banners.scss
+++ b/css/banners.scss
@@ -102,7 +102,7 @@ html, body{
 
 .click-area {
   width: 100%;
-  height: 5em;
+  height: 4em;
 }
 
 .arrow {
